syntax = "proto3";

package xyz.block.ftl.test.v1;

import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/test/v1;testpb";
option java_multiple_files = true;

message StartTestRunRequest {
  string module_name = 1;
  string endpoint = 2;
  string hot_reload_endpoint = 3;
}

message StartTestRunResponse {
  string deployment_key = 1;
}

// HotReloadService is for communication between a language plugin a language runtime that can perform a hot reload
service TestService {
  // Ping service for readiness.
  rpc Ping(xyz.block.ftl.v1.PingRequest) returns (xyz.block.ftl.v1.PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc StartTestRun(StartTestRunRequest) returns (StartTestRunResponse);
}
